git feat 变更jpackage打包方式，直接对jar进行打包，完了非模块化操作。