@@ -13,7 +13,9 @@
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <maven.compiler.release>22</maven.compiler.release>
-        <javafx.version>22</javafx.version>
+<!--        <javafx.version>22</javafx.version>-->
+        <javafx.version>22.0.1</javafx.version>
+        <start-class>com.tom.JavafxMain</start-class>
     </properties>
 
 
@@ -126,16 +128,6 @@
             <version>3.5.16</version>
         </dependency>
 
-<!--        <dependency>
-            <groupId>com.dream-orm</groupId>
-            <artifactId>dream-orm-drive</artifactId>
-            <version>1.3.1</version>
-        </dependency>-->
-        <!--<dependency>
-            <groupId>com.dream-orm</groupId>
-            <artifactId>dream-orm-util</artifactId>
-            <version>1.3.1</version>
-        </dependency>-->
     </dependencies>
 
     <build>
@@ -162,30 +154,34 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.2</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>${start-class}</mainClass>
+                        </manifest>
+                    </archive>
+                    <outputDirectory>${project.build.directory}/jars</outputDirectory>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>single</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/alternateLocation</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <includeScope>runtime</includeScope>
-                            <!--<excludeArtifactIds>lombok</excludeArtifactIds>-->
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>image</id>
@@ -200,132 +196,30 @@
                                 <argument>MyDriver</argument>
                                 <argument>-t</argument>
                                 <argument>app-image</argument>
-                                <argument>-m</argument>
-                                <argument>my_driver/com.tom.JavafxMain</argument>
-                                <argument>--icon</argument>
+                                <argument>-i</argument>
                                 <argument>
-                                    ${project.basedir}/src/main/resources/favicon.ico
+                                    ${project.build.directory}/jars
                                 </argument>
                                 <argument>--java-options</argument>
                                 <argument>--enable-preview</argument>
-<!--                                <argument>&#45;&#45;java-options</argument>-->
-<!--                                <argument>&#45;&#45;add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</argument>-->
-                                <argument>--runtime-image</argument>
-                                <argument>
-                                    ${project.build.directory}/build-link
-                                </argument>
+                                <argument>--main-class</argument>
+                                <argument>${start-class}</argument>
+                                <argument>--main-jar</argument>
+                                <argument>${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
                                 <argument>--dest</argument>
-                                <argument>${project.build.directory}/${project.artifactId}-${project.version}-EXE
-                                </argument>
-                                <argument>--app-version</argument>
-                                <argument>1.0.0</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>installer</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>jpackage</executable>
-                            <workingDirectory>${project.basedir}</workingDirectory>
-                            <arguments>
-                                <argument>-n</argument>
-                                <argument>MyDriver</argument>
-                                <argument>-t</argument>
-                                <argument>dmg</argument>
-                                <argument>-p</argument>
-                                <argument>
-                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
-                                </argument>
-                                <argument>-d</argument>
-                                <argument>${project.build.directory}/mvnInstaller</argument>
-                                <argument>-m</argument>
-                                <argument>my_driver/com.tom.JavafxMain</argument>
+                                <argument>${project.build.directory}/buildImage</argument>
+                                <argument>--win-console</argument>
                                 <argument>--icon</argument>
                                 <argument>
                                     ${project.basedir}/src/main/resources/favicon.ico
                                 </argument>
-                                <argument>--app-version</argument>
-                                <argument>1.0.0</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>imageFromPackage</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>jpackage</executable>
-                            <workingDirectory>${project.basedir}</workingDirectory>
-                            <arguments>
-                                <argument>-n</argument>
-                                <argument>MyDriver</argument>
-                                <argument>-t</argument>
-                                <argument>app-image</argument>
-                                <argument>-p</argument>
-                                <!-- ${path.separator} = ; 下面其实包含了两个路径，一个target/alternateLocation,还有一个是package打出来的jar包-->
-                                <argument>
-                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
-                                </argument>
-                                <argument>-d</argument>
-                                <argument>${project.build.directory}/mvnPackage</argument>
-                                <argument>-m</argument>
-                                <argument>my_driver/com.tom.JavafxMain</argument>
-                                <argument>--icon</argument>
-                                <argument>
-                                    ${project.basedir}/src/main/resources/favicon.ico
-                                </argument>
-                                <argument>--java-options</argument>
-                                <argument>--enable-preview</argument>
-                                <argument>--java-options</argument>
-                                <argument>-Djavax.xml.accessExternalDTD=all</argument>
                                 <argument>--app-version</argument>
                                 <argument>1.0.0</argument>
                             </arguments>
                         </configuration>
                     </execution>
                 </executions>
-
             </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <stripDebug>true</stripDebug>
-                    <compress>1</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    <launcher>MyDriver</launcher>
-                    <jlinkImageName>build-link</jlinkImageName>
-                    <!--                    <jlinkZipName>MyDriver</jlinkZipName>-->
-                    <mainClass>my_driver/com.tom.JavafxMain</mainClass>
-                    <options>
-                        <option>--enable-preview</option>
-                        <option>-Djavax.xml.accessExternalDTD=all</option>
-<!--                        <option>&#45;&#45;add-reads org.slf4j=org.apache.logging.log4j.slf4j.impl</option>-->
-                    </options>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>com.gluonhq</groupId>
-                <artifactId>gluonfx-maven-plugin</artifactId>
-                <version>1.0.22</version>
-                <configuration>
-                    <mainClass>com.tom.JavafxMain</mainClass>
-                    <graalvmHome>D:\java\graalvm-jdk-22_36.1</graalvmHome>
-                    <!--                    <bundlesList>-->
-                    <!--                        <list>LanguageResource</list>-->
-                    <!--                        <list>LanguageResource_en</list>-->
-                    <!--                        <list>LanguageResource_zh_CN</list>-->
-                    <!--                    </bundlesList>-->
-                </configuration>
-            </plugin>
-
         </plugins>
 
         <resources>
